Paging and sorting in list (except direction, for some reason)

--- a/src/app/employee-list/employee-list-card/employee-list-card.component.html
+++ b/src/app/employee-list/employee-list-card/employee-list-card.component.html
@@ -1,7 +1,7 @@
-<div class="card" fxLayout="row" fxLayout="center start">
+<div class="card" fxLayout="row" fxLayoutAlign="center center">
   <div fxFlex="1 0 5%">
     <a (click)="edit(employee.id)">
-      <fa name="edit"></fa>
+      <fa name="edit" class="large-icon"></fa>
     </a>
   </div>
   <div fxFlex="0 1 95%">{{ employee.lastName }}, {{employee.firstName }}</div>
