--- a/src/app/employee-list/employee-list-card/employee-list-card.component.css
+++ b/src/app/employee-list/employee-list-card/employee-list-card.component.css
@@ -1,6 +1,11 @@
 .card {
-  padding: 20px;
+  padding: 15px;
   border: solid 1px blue;
   border-radius: 10px;
-  font-size: 200%;
+  font-size: 130%;
+}
+
+.card-text {
+  display: inline-block;
+  vertical-align: middle;
 }
