--- a/src/app/employee-list/employee-list-card/employee-list-card.component.html
+++ b/src/app/employee-list/employee-list-card/employee-list-card.component.html
@@ -4,5 +4,6 @@
       <fa name="edit" class="large-icon"></fa>
     </a>
   </div>
-  <div fxFlex="0 1 95%">{{ employee.lastName }}, {{employee.firstName }}</div>
+  <div fxFlex="0 1 85%">{{ employee.lastName }}, {{employee.firstName }}</div>
+  <div fxFlex="0 1 10%">{{ employee.address.addressLine2 }}</div>
 </div>
